# pkg/api/types/v1alpha1/istio_resources.pb.go
@@ -898,6 +898,82 @@ func (x *WasmPlugin) GetTargetRefs() []*PolicyTargetReference {
 	return nil
 }
 
+// ServiceEntry represents an Istio ServiceEntry resource.
+type ServiceEntry struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// name is the name of the service entry.
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	// namespace is the namespace of the service entry.
+	Namespace string `protobuf:"bytes,2,opt,name=namespace,proto3" json:"namespace,omitempty"`
+	// raw_spec is the service entry spec as a JSON string.
+	RawSpec string `protobuf:"bytes,3,opt,name=raw_spec,json=rawSpec,proto3" json:"raw_spec,omitempty"`
+	// export_to controls the visibility of this service entry to other namespaces.
+	ExportTo []string `protobuf:"bytes,4,rep,name=export_to,json=exportTo,proto3" json:"export_to,omitempty"`
+}
+
+func (x *ServiceEntry) Reset() {
+	*x = ServiceEntry{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[11]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ServiceEntry) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ServiceEntry) ProtoMessage() {}
+
+func (x *ServiceEntry) ProtoReflect() protoreflect.Message {
+	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[11]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ServiceEntry.ProtoReflect.Descriptor instead.
+func (*ServiceEntry) Descriptor() ([]byte, []int) {
+	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{11}
+}
+
+func (x *ServiceEntry) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *ServiceEntry) GetNamespace() string {
+	if x != nil {
+		return x.Namespace
+	}
+	return ""
+}
+
+func (x *ServiceEntry) GetRawSpec() string {
+	if x != nil {
+		return x.RawSpec
+	}
+	return ""
+}
+
+func (x *ServiceEntry) GetExportTo() []string {
+	if x != nil {
+		return x.ExportTo
+	}
+	return nil
+}
+
 // IstioControlPlaneConfig represents configuration from the Istio control plane.
 type IstioControlPlaneConfig struct {
 	state         protoimpl.MessageState
@@ -917,7 +993,7 @@ type IstioControlPlaneConfig struct {
 func (x *IstioControlPlaneConfig) Reset() {
 	*x = IstioControlPlaneConfig{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[11]
+		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[12]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -930,7 +1006,7 @@ func (x *IstioControlPlaneConfig) String() string {
 func (*IstioControlPlaneConfig) ProtoMessage() {}
 
 func (x *IstioControlPlaneConfig) ProtoReflect() protoreflect.Message {
-	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[11]
+	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[12]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -943,7 +1019,7 @@ func (x *IstioControlPlaneConfig) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use IstioControlPlaneConfig.ProtoReflect.Descriptor instead.
 func (*IstioControlPlaneConfig) Descriptor() ([]byte, []int) {
-	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{11}
+	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{12}
 }
 
 func (x *IstioControlPlaneConfig) GetPilotScopeGatewayToNamespace() bool {
@@ -1111,20 +1187,28 @@ var file_types_v1alpha1_istio_resources_proto_rawDesc = []byte{
 	0x32, 0x2f, 0x2e, 0x6e, 0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x74, 0x79, 0x70,
 	0x65, 0x73, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2e, 0x50, 0x6f, 0x6c, 0x69,
 	0x63, 0x79, 0x54, 0x61, 0x72, 0x67, 0x65, 0x74, 0x52, 0x65, 0x66, 0x65, 0x72, 0x65, 0x6e, 0x63,
-	0x65, 0x52, 0x0a, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x52, 0x65, 0x66, 0x73, 0x22, 0x88, 0x01,
-	0x0a, 0x17, 0x49, 0x73, 0x74, 0x69, 0x6f, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x6f, 0x6c, 0x50, 0x6c,
-	0x61, 0x6e, 0x65, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12, 0x46, 0x0a, 0x20, 0x70, 0x69, 0x6c,
-	0x6f, 0x74, 0x5f, 0x73, 0x63, 0x6f, 0x70, 0x65, 0x5f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79,
-	0x5f, 0x74, 0x6f, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x08, 0x52, 0x1c, 0x70, 0x69, 0x6c, 0x6f, 0x74, 0x53, 0x63, 0x6f, 0x70, 0x65, 0x47,
-	0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x54, 0x6f, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63,
-	0x65, 0x12, 0x25, 0x0a, 0x0e, 0x72, 0x6f, 0x6f, 0x74, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70,
-	0x61, 0x63, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x6f, 0x6f, 0x74, 0x4e,
-	0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68,
-	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6c, 0x69, 0x61, 0x6d, 0x61, 0x77, 0x68, 0x69, 0x74,
-	0x65, 0x2f, 0x6e, 0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f,
-	0x61, 0x70, 0x69, 0x2f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68,
-	0x61, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x65, 0x52, 0x0a, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x52, 0x65, 0x66, 0x73, 0x22, 0x78, 0x0a,
+	0x0c, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x12, 0x12, 0x0a,
+	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d,
+	0x65, 0x12, 0x1c, 0x0a, 0x09, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x02,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12,
+	0x19, 0x0a, 0x08, 0x72, 0x61, 0x77, 0x5f, 0x73, 0x70, 0x65, 0x63, 0x18, 0x03, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x07, 0x72, 0x61, 0x77, 0x53, 0x70, 0x65, 0x63, 0x12, 0x1b, 0x0a, 0x09, 0x65, 0x78,
+	0x70, 0x6f, 0x72, 0x74, 0x5f, 0x74, 0x6f, 0x18, 0x04, 0x20, 0x03, 0x28, 0x09, 0x52, 0x08, 0x65,
+	0x78, 0x70, 0x6f, 0x72, 0x74, 0x54, 0x6f, 0x22, 0x88, 0x01, 0x0a, 0x17, 0x49, 0x73, 0x74, 0x69,
+	0x6f, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x6f, 0x6c, 0x50, 0x6c, 0x61, 0x6e, 0x65, 0x43, 0x6f, 0x6e,
+	0x66, 0x69, 0x67, 0x12, 0x46, 0x0a, 0x20, 0x70, 0x69, 0x6c, 0x6f, 0x74, 0x5f, 0x73, 0x63, 0x6f,
+	0x70, 0x65, 0x5f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x5f, 0x74, 0x6f, 0x5f, 0x6e, 0x61,
+	0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x1c, 0x70,
+	0x69, 0x6c, 0x6f, 0x74, 0x53, 0x63, 0x6f, 0x70, 0x65, 0x47, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79,
+	0x54, 0x6f, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12, 0x25, 0x0a, 0x0e, 0x72,
+	0x6f, 0x6f, 0x74, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x6f, 0x6f, 0x74, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61,
+	0x63, 0x65, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
+	0x2f, 0x6c, 0x69, 0x61, 0x6d, 0x61, 0x77, 0x68, 0x69, 0x74, 0x65, 0x2f, 0x6e, 0x61, 0x76, 0x69,
+	0x67, 0x61, 0x74, 0x6f, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x74, 0x79,
+	0x70, 0x65, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -1139,7 +1223,7 @@ func file_types_v1alpha1_istio_resources_proto_rawDescGZIP() []byte {
 	return file_types_v1alpha1_istio_resources_proto_rawDescData
 }
 
-var file_types_v1alpha1_istio_resources_proto_msgTypes = make([]protoimpl.MessageInfo, 15)
+var file_types_v1alpha1_istio_resources_proto_msgTypes = make([]protoimpl.MessageInfo, 16)
 var file_types_v1alpha1_istio_resources_proto_goTypes = []any{
 	(*DestinationRule)(nil),         // 0: navigator.types.v1alpha1.DestinationRule
 	(*DestinationRuleSubset)(nil),   // 1: navigator.types.v1alpha1.DestinationRuleSubset
@@ -1152,19 +1236,20 @@ var file_types_v1alpha1_istio_resources_proto_goTypes = []any{
 	(*RequestAuthentication)(nil),   // 8: navigator.types.v1alpha1.RequestAuthentication
 	(*PeerAuthentication)(nil),      // 9: navigator.types.v1alpha1.PeerAuthentication
 	(*WasmPlugin)(nil),              // 10: navigator.types.v1alpha1.WasmPlugin
-	(*IstioControlPlaneConfig)(nil), // 11: navigator.types.v1alpha1.IstioControlPlaneConfig
-	nil,                             // 12: navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
-	nil,                             // 13: navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
-	nil,                             // 14: navigator.types.v1alpha1.Gateway.SelectorEntry
+	(*ServiceEntry)(nil),            // 11: navigator.types.v1alpha1.ServiceEntry
+	(*IstioControlPlaneConfig)(nil), // 12: navigator.types.v1alpha1.IstioControlPlaneConfig
+	nil,                             // 13: navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
+	nil,                             // 14: navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
+	nil,                             // 15: navigator.types.v1alpha1.Gateway.SelectorEntry
 }
 var file_types_v1alpha1_istio_resources_proto_depIdxs = []int32{
 	1,  // 0: navigator.types.v1alpha1.DestinationRule.subsets:type_name -> navigator.types.v1alpha1.DestinationRuleSubset
 	2,  // 1: navigator.types.v1alpha1.DestinationRule.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
-	12, // 2: navigator.types.v1alpha1.DestinationRuleSubset.labels:type_name -> navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
-	13, // 3: navigator.types.v1alpha1.WorkloadSelector.match_labels:type_name -> navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
+	13, // 2: navigator.types.v1alpha1.DestinationRuleSubset.labels:type_name -> navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
+	14, // 3: navigator.types.v1alpha1.WorkloadSelector.match_labels:type_name -> navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
 	2,  // 4: navigator.types.v1alpha1.EnvoyFilter.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
 	3,  // 5: navigator.types.v1alpha1.EnvoyFilter.target_refs:type_name -> navigator.types.v1alpha1.PolicyTargetReference
-	14, // 6: navigator.types.v1alpha1.Gateway.selector:type_name -> navigator.types.v1alpha1.Gateway.SelectorEntry
+	15, // 6: navigator.types.v1alpha1.Gateway.selector:type_name -> navigator.types.v1alpha1.Gateway.SelectorEntry
 	2,  // 7: navigator.types.v1alpha1.Sidecar.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
 	2,  // 8: navigator.types.v1alpha1.RequestAuthentication.selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
 	3,  // 9: navigator.types.v1alpha1.RequestAuthentication.target_refs:type_name -> navigator.types.v1alpha1.PolicyTargetReference
@@ -1317,6 +1402,18 @@ func file_types_v1alpha1_istio_resources_proto_init() {
 			}
 		}
 		file_types_v1alpha1_istio_resources_proto_msgTypes[11].Exporter = func(v any, i int) any {
+			switch v := v.(*ServiceEntry); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_types_v1alpha1_istio_resources_proto_msgTypes[12].Exporter = func(v any, i int) any {
 			switch v := v.(*IstioControlPlaneConfig); i {
 			case 0:
 				return &v.state
@@ -1335,7 +1432,7 @@ func file_types_v1alpha1_istio_resources_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_types_v1alpha1_istio_resources_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   15,
+			NumMessages:   16,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
